--- a/src/components/_pages/Home.module.scss
+++ b/src/components/_pages/Home.module.scss
@@ -201,8 +201,11 @@
         &_images {
             align-items: center;
             flex-direction: column;
-            gap: 1.4rem;
             margin-top: 0.66rem;
+
+            & > div:not(:last-child) {
+                margin-bottom: 1.4rem;
+            }
 
             &_container {
                 position: relative;
