--- a/src/components/services/Presentation.module.scss
+++ b/src/components/services/Presentation.module.scss
@@ -10,7 +10,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    grid-gap: 2rem;
+
+    & > div:not(:last-child) {
+        margin-bottom: 2rem;
+    }
 }
 
 .square {
@@ -69,7 +72,10 @@
         margin-top: 0;
         flex-direction: column;
         align-items: center;
-        grid-gap: 0;
+
+        & > div:not(:last-child) {
+            margin-bottom: 0;
+        }
     }
 
     .square { 
@@ -81,11 +87,11 @@
         
         &_header {
             flex-direction: column;
-            grid-gap: 0.5rem;
             width: 100%;
             
             &_title {
                 font-size: 25px;
+                margin-bottom: 0.5rem;
             }
         }
 
